yard-app/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yard-app
  namespace: wms-proto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: yard-app
  template:
    metadata:
      labels:
        app: yard-app
    spec:
      imagePullSecrets:
        - name: nexus-docker-creds
      containers:
        - name: yard-app
          image: nexus3.platform.svc.cluster.local:8082/yard-app:jenkins-6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8155
          readinessProbe:
            httpGet:
              path: /api/yard/actuator/health/readiness
              port: 8155
            initialDelaySeconds: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/yard/actuator/health/liveness
              port: 8155
            initialDelaySeconds: 180
            periodSeconds: 10
