yard-app/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yard-postgres
  namespace: wms-proto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yard-postgres
  template:
    metadata:
      labels:
        app: yard-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12.8
          ports:
            - containerPort: 5432
