yard-app/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yard-app
  namespace: wms-proto
spec:
  selector:
    app: yard-app
  ports:
    - port: 8155
      targetPort: 8155
