yard-app/base/hazelcast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yard-hazelcast
  namespace: wms-proto
spec:
  selector:
    app: yard-hazelcast
  ports:
    - port: 5701
      targetPort: 5701
