yard-app/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yard-postgres
  namespace: wms-proto
spec:
  selector:
    app: yard-postgres
  ports:
    - port: 5432
      targetPort: 5432
