yard-app/base/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yard-zookeeper
  namespace: wms-proto
spec:
  selector:
    app: yard-zookeeper
  ports:
    - port: 2181
      targetPort: 2181
